# fraud-mlops-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
docker/: Dockerfile  docker-compose.yml
docs/decisions/: 0001-business-metric.md  0002-cost-asymmetry.md  0003-dataset-choice.md  0004-stack-summary.md  0005-dvc-local-remote.md  0006-no-data-leakage.md  0007-scale-time-amount-only.md  0008-preprocessor-persistence.md  0009-stratified-split.md  0010-pandera-strict-lazy.md  0011-mlflow-sqlite-backend.md  0012-imbalance-strategy.md  0013-winning-model-xgboost.md  0014-cost-optimal-threshold.md  README.md
notebooks/: 01_exploration.ipynb
pipelines/: monitoring_pipeline.py  training_pipeline.py
project_context/: mlops_endRoadmap.md  mlops_fundamentals.md  mlops_generalRoadmap.md  mlops_phase0.md  mlops_phase1.md  mlops_phase2.md  mlops_phase3.md  mlops_phase4.md  mlops_phase5.md  mlops_phase6.md  mlops_phase7.md  mlops_phase8.md  mlops_phase9.md
reports/: metrics.json  validation.json
src/: __init__.py  config.py  exceptions.py
src/api/: __init__.py  main.py  predict.py  schemas.py
src/data/: __init__.py  ingest.py  preprocess.py  validate.py
src/models/: __init__.py  evaluate.py  register.py  train.py
src/monitoring/: __init__.py  dashboard.py  drift.py
tests/: test_api.py  test_data.py  test_model.py
